--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body>
+<body class="full-height">
   <app-root></app-root>
 </body>
 </html>
